--- a/view/common/header.html
+++ b/view/common/header.html
@@ -22,7 +22,7 @@
         <li class="nav_field_item"><a href="/view/field/field.html?page=bankrupcy">체당금</a></li>
         <li class="nav_field_item"><a href="/view/field/field.html?page=industrial_accident">산재보상</a></li>
         <li class="nav_field_item"><a href="/view/field/field.html?page=unfair_dismissal">부당해고</a></li>
-        <li class="nav_field_item"><a href="/view/field/field.html?page=advice">임사노무자문</a></li>
+        <li class="nav_field_item"><a href="/view/field/field.html?page=advice">인사노무자문</a></li>
         <li class="nav_field_item"><a href="/view/field/field.html?page=labor_union">노동조합/노사관계</a></li>
       </ul>
     </li>
