--- a/view/home/main.html
+++ b/view/home/main.html
@@ -42,7 +42,7 @@
 </section>
 
 <section class="index_section2">
-  <a href="">
+  <a href="/view/field/field.html">
      <div class="section_item">
       <div class="section_img"><img src="/images/index/unpaid.jpg" alt="임금체불"></div>
       <div class="section_text">
@@ -54,7 +54,7 @@
       </div>
     </div>
   </a>
-  <a href="">
+  <a href="/view/field/field.html?page=bankrupcy">
     <div class="section_item">
      <div class="section_img"><img src="/images/index/bankrupt.jpg" alt="체당금"></div>
      <div class="section_text">
@@ -66,7 +66,7 @@
     </div>
    </div>
  </a>
-  <a href="">
+  <a href="/view/field/field.html?page=industrial_accident">
      <div class="section_item">
       <div class="section_img"><img src="/images/index/accident.jpg" alt="산재보상"></div>
       <div class="section_text">
@@ -78,7 +78,7 @@
       </div>
     </div>
   </a>
-  <a href="">
+  <a href="/view/field/field.html?page=unfair_dismissal">
      <div class="section_item">
       <div class="section_img"><img src="/images/index/fired.jpg" alt="부당해고"></div>
       <div class="section_text">
@@ -90,7 +90,7 @@
       </div>
     </div>
   </a>
-  <a href="">
+  <a href="/view/field/field.html?page=advice">
      <div class="section_item">
       <div class="section_img"><img src="/images/index/meeting.jpg" alt="노무자문"></div>
       <div class="section_text">
@@ -102,7 +102,7 @@
       </div>
     </div>
   </a>
-  <a href="">
+  <a href="/view/field/field.html?page=labor_union">
     <div class="section_item">
      <div class="section_img"><img src="/images/index/argument.jpg" alt="노사관계"></div>
      <div class="section_text">
