--- a/css/common/reset.css
+++ b/css/common/reset.css
@@ -56,7 +56,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1.5rem;
-	min-height: 100vh;
+	/* min-height: 100vh; */
 }
 ol, ul {
 	list-style: none;
@@ -99,7 +99,8 @@ a:visited {
   position: absolute;
   top: 0;
   width: 100%;
-  height: 100%;
+	height: 100%;
+	min-height: 100vh;
 	background-color: #fff;
 	display: flex;
 	justify-content: center;
