--- a/view/introduce/introduce_main_section.html
+++ b/view/introduce/introduce_main_section.html
@@ -98,13 +98,13 @@
           <h5>학력</h5>
         </li>
         <li class="member_person_education_text">
-          학력내용
+          <span>학력내용</span>
         </li>
         <li class="member_person_field">
           <h5>전문분야</h5>
         </li>
         <li class="member_person_field_text">
-          전문분야 내용
+          <span>전문분야 내용</span>
         </li>
         <li class="member_person_career">
           <h5>경력</h5>
@@ -134,19 +134,19 @@
           <h5>학력</h5>
         </li>
         <li class="member_person_education_text">
-          학력내용
+          <span>학력내용</span>
         </li>
         <li class="member_person_field">
           <h5>전문분야</h5>
         </li>
         <li class="member_person_field_text">
-          전문분야 내용
+          <span>전문분야 내용</span>
         </li>
         <li class="member_person_career">
           <h5>경력</h5>
         </li>
         <li class="member_person_career_text">
-          경력 내용
+          <span>경력 내용</span>
         </li>
       </ul>
     </li>
@@ -165,19 +165,19 @@
           <h5>학력</h5>
         </li>
         <li class="member_person_education_text">
-          학력내용
+          <span>학력내용</span>
         </li>
         <li class="member_person_field">
           <h5>전문분야</h5>
         </li>
         <li class="member_person_field_text">
-          전문분야 내용
+          <span>전문분야 내용</span>
         </li>
         <li class="member_person_career">
           <h5>경력</h5>
         </li>
         <li class="member_person_career_text">
-          경력 내용
+          <span>경력 내용</span>
         </li>
       </ul>
     </li>
