--- a/view/common/not_ready.html
+++ b/view/common/not_ready.html
@@ -11,8 +11,17 @@
 <script src="https://kit.fontawesome.com/109a8b14d9.js" crossorigin="anonymous"></script>
 <!-- 제이쿼리 -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-database.js"></script>
 </head>
 <body>
+   <!-- 모달창 -->
+   <div class="modal_window">
+    <div class="loader"></div>
+  </div>
+  
   <div class="grid_container">
     <!-- 화면 상단 부분 -->
     <header class="header" include-html="/view/common/header.html"></header>
