--- a/view/common/not_ready_main.html
+++ b/view/common/not_ready_main.html
@@ -21,8 +21,8 @@
     color: rgb(66, 64, 180);
   }
 </style>
-<!-- <script>
+<script>
   setTimeout(function() {
-    location.href = 'http://d-labor.com';
+    location.href = '/';
   }, 3000);
-</script> -->
+</script>
