--- a/view/support/post/post.html
+++ b/view/support/post/post.html
@@ -1,3 +1,4 @@
+<!-- 기본 템플렛 -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -26,7 +27,7 @@
     <header class="header" include-html="/view/common/header.html"></header>
     
     <!-- 화면 중앙 콘텐츠 부분 -->
-    <main class="main" include-html="/view/common/privacy_terms_main_section.html"></main>
+    <main class="main" include-html="/view/support/post/post_main_section.html"></main>
 
     <!-- 하단 nav 부분 -->
     <nav class="footer_nav" include-html="/view/common/footer_nav.html"></nav>
