--- a/css/common/header.css
+++ b/css/common/header.css
@@ -24,12 +24,11 @@
   margin-left: 1rem;
 }
 .nav_introduce_item_container,
-.nav_field_item_container{
-  padding-top: 3px;
+.nav_field_item_container,
+.nav_support_item_container{
+  padding: 3px;
   position: absolute;
   background-color: #fff;
-  border: 8px solid #fff;
-  border-top: 3px;
   border-radius: 4px;
   box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.1);
 }
@@ -39,19 +38,23 @@
   height: 25px;
 } */
 .nav_introduce_item_container>li.highlight,
-.nav_field_item_container>li.highlight{
+.nav_field_item_container>li.highlight,
+.nav_support_item_container>li.highlight{
   background-color: var(--background-gray);
 }
 
 .nav_introduce_item_container a,
-.nav_field_item_container a{
+.nav_field_item_container a,
+.nav_support_item_container a{
   display: flex;
   justify-content: start;
+  align-items: center;
   width: 100%;
-  height: 40px;
-  line-height: 40px;
-  font-size: 1.3rem;
+  height: 20px;
+  font-size: 1rem;
   font-weight: 600;
+  box-sizing: content-box;
+  padding: 3px 5px;
 }
 .header a, .header a:hover, .header a:visited, .header_nav a:active{
   color: var(--logo-color);
@@ -93,21 +96,25 @@ span.arrow{
     background-color: var(--background-gray);
   }
   .nav_introduce_item_container,
-  .nav_field_item_container{
+  .nav_field_item_container,
+  .nav_support_item_container{
     margin-top: 0;
     background-color: var(--background-gray);
     position: relative;
     box-shadow: none;
   }
   .nav_introduce_item_container>li,
-  .nav_field_item_container>li{
+  .nav_field_item_container>li,
+  .nav_support_item_container>li{
     padding: 6px 0px;
   }
   .nav_introduce_item_container a,
-  .nav_field_item_container a{
+  .nav_field_item_container a,
+  .nav_support_item_container a{
     justify-content: center;
+    font-size: 1.1rem;
     height: 30px;
-    line-height: 30px;
+    padding: 0;
   }
   .nav_introduce_item_container{
     border: 1px solid white;
@@ -119,6 +126,9 @@ span.arrow{
     border: 1px solid var(--background-gray);
   }
   .nav_field_item:nth-child(odd){
+    background-color: white;
+  }
+  .nav_support_item:nth-child(even){
     background-color: white;
   }
   .header_nav_icon{
