--- a/css/support/post_section.css
+++ b/css/support/post_section.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
+  box-sizing: border-box;
   align-items: center;
   background-color: #fff;
 }
@@ -72,4 +73,15 @@ span.file{
 .post_contents a:hover, .post_contents a:active{
   font-weight: 400;
   color: var(--logo-color);
+}
+.go_board > a, .go_board > a:visited,
+.go_board > a:hover, .go_board > a:active {
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+@media screen and (max-width: 1023px) {
+  .post_contents{
+    margin-top: 20px;
+  }
 }
