--- a/view/support/support_board_main_section.html
+++ b/view/support/support_board_main_section.html
@@ -7,7 +7,7 @@
 <nav class="navigation">
   <ul class="nav_container">
     <a href="#" class="current"><li><h6>자료실</h6></li></a>
-    <a href="#"><li><h6>상담신청</h6></li></a>
+    <a href="/view/common/not_ready.html"><li><h6>상담신청</h6></li></a>
   </ul>
 </nav>
 
