--- a/view/support/post/post_main_section.html
+++ b/view/support/post/post_main_section.html
@@ -6,8 +6,8 @@
 <!-- 네비게이션 -->
 <nav class="navigation">
   <ul class="nav_container">
-    <a href="#" class="current"><li><h6>자료실</h6></li></a>
-    <a href="#"><li><h6>상담신청</h6></li></a>
+    <a href="/view/support/support.html" class="current"><li><h6>자료실</h6></li></a>
+    <a href="/view/common/not_ready.html"><li><h6>상담신청</h6></li></a>
   </ul>
 </nav>
 
