--- a/view/support/support_board_main_section.html
+++ b/view/support/support_board_main_section.html
@@ -26,7 +26,7 @@
 
     <div class="page_nation">
       <a href="#" class="first_page"><span>◁</span></a>
-      <a href="#" class="pages"><span>1</span></a>
+      <span class="pages"><a href="/view/support/support.html?page=1">1</a></span>
       <a href="#" class="last_page"><span>▷</span></a>
     </div>
   </div>
