--- a/view/common/template.html
+++ b/view/common/template.html
@@ -16,6 +16,7 @@
 <!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-database.js"></script>
 </head>
 <body>
