--- a/view/common/header.html
+++ b/view/common/header.html
@@ -38,7 +38,12 @@
   <a class="header_nav_icon"><i class="fas fa-bars"></i></a>
   <!-- top 아이콘 -->
   <a href="#header" class="header_icon_top hidden"><h6>▲</h6></a>
+  <ul class="user_info hidden">
+    <li>아이디(닉네임)</li>
+    <li><button id="button_logout" type="button">로그아웃</button></li>
+  </ul>
 </div>
 
 <!-- js -->
 <script src="/js/common/header.js"></script>
+<script src="/js/common/header_firebase.js"></script>
