--- a/view/field/field.html
+++ b/view/field/field.html
@@ -40,5 +40,6 @@
   
   <script type="text/javascript" src="/js/common/include.js"></script>
   <script>includeHTML();</script>
+  <script src="/js/field/field_firebase.js"></script>
 </body>
 </html>
