--- a/view/home/main.html
+++ b/view/home/main.html
@@ -10,9 +10,9 @@
   <div id="demo" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ul class="carousel-indicators">
-      <li data-target="#demo" data-slide-to="0" class="active"></li>
-      <li data-target="#demo" data-slide-to="1"></li>
-      <!-- <li data-target="#demo" data-slide-to="2"></li> -->
+      <li data-target="#demo" data-slide-to="0" class="active hidden"></li>
+      <li data-target="#demo" data-slide-to="1" class="hidden"></li>
+      <li data-target="#demo" data-slide-to="2" class="hidden"></li>
     </ul>
     <!-- The slideshow -->
     <div class="carousel-inner">
@@ -28,6 +28,13 @@
         <div class="carousel-caption">
           <h3>Best partner</h3>
           <h5>항상 고객과 함께하는 믿음직한 벗이 되겠습니다</h5>
+        </div>  
+      </div>
+      <div class="carousel-item">
+        <img src="/images/index/slide3.jpg" alt="Slide3">
+        <div class="carousel-caption">
+          <h3>3번째 슬라이드</h3>
+          <h5>3번째 슬라이드의 내용</h5>
         </div>  
       </div>
     </div>
