--- a/view/introduce/introduce_main_section.html
+++ b/view/introduce/introduce_main_section.html
@@ -40,7 +40,6 @@
       <li>
         <div class="greeting_sign">
           <h5>대일노무법인 대표<br>손강용</h5>
-          <!-- <img src="/images/common/sign.gif" alt="서명"> -->
         </div>
       </li>
     </ul>
@@ -51,8 +50,6 @@
   <div class="member_container">
     <div class="member_tag">
       <a href="#" class="current">손강용</a>
-      <a href="#">김희숙</a>
-      <a href="#">박재원</a>
     </div>
     <div class="peaple_container">
       <div class="person_container">
@@ -89,83 +86,16 @@
               <li>· MAIL : email@email.com</li>
             </ul>
           </div>
-        </div>
-      </div>
-
-      <div class="person_container hidden">
-        <div class="person_picture">
-          <img src="" alt="사진">
-        </div>
-        <div class="person_information">
-          <div class="person_name">
-            <h5>공인노무사</h5>
-            <ul>
-              <li><h4>김희숙</h4></li>
-            </ul>
-          </div>
-          <div class="person_major">
-            <h5>전문분야</h5>
-            <ul>
-              <li>· 전문분야1</li>
-              <li>· 전문분야2</li>
-            </ul>
-          </div>
-          <div class="person_career">
-            <h5>경력사항</h5>
-            <ul>
-              <li>· 경력사항1</li>
-              <li>· 경력사항2</li>
-              <li>· 경력사항3</li>
-              <li>· 경력사항4</li>
-            </ul>
-          </div>
-          <div class="person_contact">
-            <h5>연락처</h5>
-            <ul>
-              <li>· TEL : 02-3447-6161</li>
-              <li>· MAIL : email@email.com</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="person_container hidden">
-        <div class="person_picture">
-          <img src="" alt="사진">
-        </div>
-        <div class="person_information">
-          <div class="person_name">
-            <h5>공인노무사</h5>
-            <ul>
-              <li><h4>박재원</h4></li>
-            </ul>
-          </div>
-          <div class="person_major">
-            <h5>전문분야</h5>
-            <ul>
-              <li>· 전문분야1</li>
-              <li>· 전문분야2</li>
-            </ul>
-          </div>
-          <div class="person_career">
-            <h5>경력사항</h5>
-            <ul>
-              <li>· 경력사항1</li>
-              <li>· 경력사항2</li>
-              <li>· 경력사항3</li>
-              <li>· 경력사항4</li>
-            </ul>
-          </div>
-          <div class="person_contact">
-            <h5>연락처</h5>
-            <ul>
-              <li>· TEL : 070-4256-5409</li>
-              <li>· MAIL : email@email.com</li>
-            </ul>
+          <div>
+            <button id="btn_change_member1" class="hidden button_admin" type="button">정보수정</button>
+            <button id="btn_delete_member1" class="hidden button_admin" type="button">인물삭제</button>
           </div>
         </div>
       </div>
     </div>
+    <!-- <div>
+      <button id="button_insert_new_member" class="hidden button_admin">구성원 추가</button>
+    </div> -->
   </div>
 </section>
 
