--- a/css/common/header.css
+++ b/css/common/header.css
@@ -162,3 +162,17 @@ span.arrow{
   display: inline;
   color: var(--text-color-white);
 }
+
+/* 유저 정보 관련 css */
+.user_info.hidden{
+  display: none;
+}
+.user_info{
+  position: absolute;
+  display: flex;
+  top: 10px;
+  right: 10px;
+}
+.user_info > li{
+  margin-left: 20px;
+}
