--- a/css/introduce/greeting.css
+++ b/css/introduce/greeting.css
@@ -11,6 +11,7 @@
   background-color: white;
   width: 350px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-right: 20px;
