--- a/view/common/footer.html
+++ b/view/common/footer.html
@@ -7,6 +7,7 @@
     <li class="footer_nav_item"><a href="/view/common/terms.html">이용약관</a></li>
     <li class="footer_nav_item"><a href="/view/common/privacy_terms.html">개인정보보호정책</a></li>
     <li class="footer_nav_item"><a href="/view/common/refuse.html">이메일주소무단수집거부</a></li>
+    <li class="footer_nav_item footer_nav_item_admin_login"><a href="/view/admin/admin_login.html">관리자 로그인</a></li>
   </ul>
   <div class="footer_text">
     <span>우)07256&nbsp;&nbsp;서울 영등포구 당산로 133, 301호(당산동 3가, 서림빌딩)</span>
