--- a/view/common/refuse.html
+++ b/view/common/refuse.html
@@ -39,5 +39,10 @@
   </div>
   <script type="text/javascript" src="/js/common/include.js"></script>
   <script>includeHTML();</script>
+  <script>
+    setTimeout(function() {
+      closeModalWindow();
+    }, 1500);
+  </script>
 </body>
 </html>
