--- a/view/home/main.html
+++ b/view/home/main.html
@@ -46,12 +46,15 @@
       <span class="carousel-control-next-icon"></span>
     </a>
   </div>
+  <div>
+    <button id="button_carousel" type="button" class="button_admin hidden">대표이미지 내용 수정</button>
+  </div>
 </section>
 
 <section class="index_section2">
-  <a href="/view/field/field.html">
-     <div class="section_item">
-      <div class="section_img"><img src="/images/index/unpaid.jpg" alt="임금체불"></div>
+  <div class="section_item">
+    <a href="/view/field/field.html">
+      <div class="section_img"><img src="/images/index/item1.jpg" alt="임금체불"></div>
       <div class="section_text">
         <h5>임금체불</h5>
         <span>미지급 급여, 미지급 퇴직금 구제</span>
@@ -59,66 +62,7 @@
       <div class="setction_nav_go">
         바로가기
       </div>
-    </div>
-  </a>
-  <a href="/view/field/field.html?page=bankrupcy">
-    <div class="section_item">
-     <div class="section_img"><img src="/images/index/bankrupt.jpg" alt="체당금"></div>
-     <div class="section_text">
-       <h5>체당금</h5>
-       <span>근무지의 파산 등으로 인해 밀린 급여 등의 구제</span>
-     </div>
-     <div class="setction_nav_go">
-      바로가기
-    </div>
-   </div>
- </a>
-  <a href="/view/field/field.html?page=industrial_accident">
-     <div class="section_item">
-      <div class="section_img"><img src="/images/index/accident.jpg" alt="산재보상"></div>
-      <div class="section_text">
-        <h5>산재보상</h5>
-        <span>업무상의 상해로 인한 요양비</span>
-      </div>
-      <div class="setction_nav_go">
-        바로가기
-      </div>
-    </div>
-  </a>
-  <a href="/view/field/field.html?page=unfair_dismissal">
-     <div class="section_item">
-      <div class="section_img"><img src="/images/index/fired.jpg" alt="부당해고"></div>
-      <div class="section_text">
-        <h5>부당해고</h5>
-        <span>정당하지 않은 해고의 구제</span>
-      </div>
-      <div class="setction_nav_go">
-        바로가기
-      </div>
-    </div>
-  </a>
-  <a href="/view/field/field.html?page=advice">
-     <div class="section_item">
-      <div class="section_img"><img src="/images/index/meeting.jpg" alt="노무자문"></div>
-      <div class="section_text">
-        <h5>노무자문</h5>
-        <span>사업자의 인사·총무 업무 자문·대행 등</span>
-      </div>
-      <div class="setction_nav_go">
-        바로가기
-      </div>
-    </div>
-  </a>
-  <a href="/view/field/field.html?page=labor_union">
-    <div class="section_item">
-     <div class="section_img"><img src="/images/index/argument.jpg" alt="노사관계"></div>
-     <div class="section_text">
-       <h5>노동조합/노사관계</h5>
-       <span>노사관계 조정 등</span>
-     </div>
-     <div class="setction_nav_go">
-      바로가기
-    </div>
-   </div>
- </a>
+    </a>
+    <button id="" class="hidden button_admin">내용수정</button>
+  </div>
 </section>
