--- a/view/support/support_board_main_section.html
+++ b/view/support/support_board_main_section.html
@@ -22,8 +22,14 @@
           <td class="post_user">대일노무법인</td>
         </tr>
       </tbody>
+      <tfoot>
+        <tr>
+          <td colspan="3">
+            <button id="button_write_post" class="hidden button_admin">글쓰기</button>
+          </td>
+        </tr>
+      </tfoot>
     </table>
-
     <div class="page_nation">
       <a href="#" class="first_page"><span>◁</span></a>
       <span class="pages"><a href="/view/support/support.html?page=1">1</a></span>
