--- a/css/home/main.css
+++ b/css/home/main.css
@@ -3,7 +3,9 @@
 .index_section{
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   background-color: white;
   margin-bottom: 10px;
 }
@@ -34,7 +36,6 @@
   width: 100%;
   display: grid;
   grid-template-columns: repeat(3, 300px);
-  grid-template-rows: repeat(2, 400px);
   justify-content: center;
   column-gap: 25px;
   row-gap: 20px;
@@ -43,14 +44,18 @@
 .index_section2 a:hover, .index_section2 a:active {
   color: var(--logo-color);
   text-decoration: none;
-}
-.section_item{
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+}
+.section_item{
+  width: 100%;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
   background-color: #ffffff;
   box-shadow: 0 0 3px 3px rgb(0, 0, 0, 0.1);
 }
@@ -67,8 +72,8 @@
   background-color: white;
   width: 100%;
   height: 100%;
-  filter: grayscale(50%);
-  -webkit-filter: grayscale(50%);
+  filter: grayscale(70%);
+  -webkit-filter: grayscale(70%);
 }
 .section_img > img:hover{
   background-color: white;
@@ -78,7 +83,7 @@
   -webkit-filter: grayscale(0%);
 }
 .section_text{
-  width: 300px;
+  width: 100%;
   margin: 15px 0px;
   margin-bottom: 0;
 }
@@ -87,7 +92,7 @@
   text-align: center;
 }
 .section_text span{
-  display: inline-block;
+  display: block;
   text-align: start;
   /* box-sizing: border-box; */
   padding: 20px 20px;
