--- a/css/common/reset.css
+++ b/css/common/reset.css
@@ -75,7 +75,8 @@ table {
 }
 a {
 	text-decoration: none;
-	outline: none
+	outline: none;
+	cursor: pointer;
 }
 a:hover{
 	text-decoration: none; 
