--- a/css/home/main.css
+++ b/css/home/main.css
@@ -72,13 +72,12 @@
   background-color: white;
   width: 100%;
   height: 100%;
+}
+.index_section2 a{
   filter: grayscale(70%);
   -webkit-filter: grayscale(70%);
 }
-.section_img > img:hover{
-  background-color: white;
-  width: 100%;
-  height: 100%;
+.index_section2 a:hover{
   filter: grayscale(0%);
   -webkit-filter: grayscale(0%);
 }
