--- a/css/support/board_section.css
+++ b/css/support/board_section.css
@@ -64,6 +64,9 @@
 }
 .pages{
   display: flex;
+}
+.pages > a{
+  display: flex;
   width: 30px;
   height: 30px;
   justify-content: center;
@@ -71,7 +74,7 @@
   border: 1px solid #ddd;
   border-left: 0;
 }
-.pages:last-child{
+.pages > a:last-child {
   border-right: 0;
 }
 .pages > a, .pages > a:visited,
